--- a/server/src/package.json
+++ b/server/src/package.json
@@ -249,7 +249,8 @@
     "yallist": "^4.0.0"
   },
   "scripts": {
-    "start": "nodemon ../server/src/index.js",
+    "start-dev": "nodemon ../server/src/index.js",
+    "start": "node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
