--- a/server/src/package.json
+++ b/server/src/package.json
@@ -58,6 +58,7 @@
     "destroy": "^1.2.0",
     "detect-libc": "^2.0.1",
     "dot-prop": "^5.3.0",
+    "dotenv": "^16.0.3",
     "duplexer3": "^0.1.4",
     "ecdsa-sig-formatter": "^1.0.11",
     "ee-first": "^1.1.1",
